# car-instrument-panel-firmware

./: CMakeLists.txt  build-upload.sh
python/: liquid_crystal_pico.py  main.py
src/: CMakeLists.txt  common.h  lcm_character_display.c  lcm_character_display.h  lcm_send.pio  led_segment_display.c  led_segment_display.h  main.c
